--- a/themes/inhabitent/style.css
+++ b/themes/inhabitent/style.css
@@ -1,7 +1,7 @@
 /*!
-Theme Name: Inhabitent
+Theme Name: RED Starter Theme
 Theme URI: http://underscores.me/
-Author: Amelia Garvin/RED Academy
+Author: RED Academy
 Author URI: http://www.redacademy.com
 Description: A WordPress starter theme for RED Academy students.
 Version: 1.0.0
