Fixed gulp intial styling of journal page

--- a/themes/inhabitent/sass/_page-templates.scss
+++ b/themes/inhabitent/sass/_page-templates.scss
@@ -3,3 +3,11 @@
 --------------------------------------------------------------*/
 
 /* Front page */
+
+// Journal Page
+.blog {
+  // color: green;
+  .site-content {
+    display: flex;
+  }
+} 
