--- a/themes/inhabitent/sass/_variables.scss
+++ b/themes/inhabitent/sass/_variables.scss
@@ -1,6 +1,8 @@
 // Structure
-
+$main_width: 1120px;
 $base__space-unit: 1.5rem;
+$solid_border: 1px solid #e1e1e1;
+$dashed_border: 1px dashed #c8c8c8;
 
 // Colors
 
@@ -19,6 +21,13 @@ $color__link: royalblue;
 $color__link-visited: purple;
 $color__link-hover: midnightblue;
 
+$brand_color_green: #248A83;
+$brand_color_purple: #2f1339;
+$brand_color_orange: #d99054;
+$brand_color_yellow: #f0e4d1;
+$brand_color_light_grey: #a1a1a1;
+$brand_color_medium_grey: #808080;
+
 // Typography
 
 $font__main: sans-serif;
@@ -26,3 +35,8 @@ $font__code: Monaco, Consolas, "Andale Mono", "DejaVu Sans Mono", monospace;
 $font__pre: "Courier 10 Pitch", Courier, monospace;
 $font__line-height-body: 1.5;
 $font__line-height-pre: 1.6;
+
+$font_size: 16px;
+$font_base_line_height: 1.75;
+$font_accent: "Montserrat", Arial, sans-serif;
+$font_main: "Merriweater", Helvetica, serif;
