styling footer and header

--- a/themes/inhabitent/sass/_elements.scss
+++ b/themes/inhabitent/sass/_elements.scss
@@ -60,8 +60,9 @@ dd {
 }
 
 img {
-	height: auto; /* Make sure images are scaled correctly. */
+	height: 30px; /* Make sure images are scaled correctly. */
 	max-width: 100%; /* Adhere to container width. */
+	
 }
 
 table {
