--- a/themes/inhabitent/sass/_navigation.scss
+++ b/themes/inhabitent/sass/_navigation.scss
@@ -6,6 +6,7 @@
 
 a {
 	color: $color__link;
+	text-decoration: none;
 
 	&:visited {
 		color: $color__link-visited;
@@ -28,7 +29,7 @@ a {
 
 .main-navigation {
 	clear: both;
-	display: block;
+	display: flex;
 	float: left;
 	width: 100%;
 
