Footer and header styling as well adding a sidebar to error page and find us page

--- a/themes/inhabitent/sass/_fonts.scss
+++ b/themes/inhabitent/sass/_fonts.scss
@@ -2,6 +2,8 @@
 # Embedded Fonts
 --------------------------------------------------------------*/
 
+@import url('https://fonts.googleapis.com/css?family=Merriweather');
+
 @font-face {
   font-family: 'merriweather';
   src: url('merriweather-bold-webfont.eot');
