--- a/themes/inhabitent/sass/_variables.scss
+++ b/themes/inhabitent/sass/_variables.scss
@@ -39,4 +39,4 @@ $font__line-height-pre: 1.6;
 $font_size: 16px;
 $font_base_line_height: 1.75;
 $font_accent: "Montserrat", Arial, sans-serif;
-$font_main: "Merriweater", Helvetica, serif;
+$font_main: "Merriweather", Helvetica, serif;
