--- a/themes/inhabitent/sass/_navigation.scss
+++ b/themes/inhabitent/sass/_navigation.scss
@@ -32,7 +32,12 @@ a {
 	display: flex;
 	justify-content: space-between;
 	width: 100%;
-	border-bottom: 1px solid #666;
+	border-bottom: 1px solid $border_color;
+	position: fixed;
+	background: rgba(255, 255, 255, 0.8); 
+	z-index: 5;
+	padding: 10px;
+	top: 30px;
 
 	ul {
 		display: none;
