--- a/themes/inhabitent/sass/_variables.scss
+++ b/themes/inhabitent/sass/_variables.scss
@@ -6,6 +6,8 @@ $dashed_border: 1px dashed #c8c8c8;
 
 // Colors
 
+$border_color: #e9e9e9;
+
 $color__background-body: #fff;
 $color__text-main: #404040;
 
