--- a/themes/inhabitent/style.css
+++ b/themes/inhabitent/style.css
@@ -226,34 +226,6 @@ th {
 /*--------------------------------------------------------------
 # Embedded Fonts
 --------------------------------------------------------------*/
-@font-face {
-  font-family: 'merriweather';
-  src: url("merriweather-bold-webfont.eot");
-  src: url("merriweather-bold-webfont.eot?#iefix") format("embedded-opentype"), url("merriweather-bold-webfont.woff2") format("woff2"), url("merriweather-bold-webfont.ttf") format("truetype"), url("merriweather-bold-webfont.svg#merriweatherbold") format("svg");
-  font-weight: bold;
-  font-style: normal; }
-
-@font-face {
-  font-family: 'merriweather';
-  src: url("merriweather-bolditalic-webfont.eot");
-  src: url("merriweather-bolditalic-webfont.eot?#iefix") format("embedded-opentype"), url("merriweather-bolditalic-webfont.woff2") format("woff2"), url("merriweather-bolditalic-webfont.ttf") format("truetype"), url("merriweather-bolditalic-webfont.svg#merriweatherbold_italic") format("svg");
-  font-weight: bold;
-  font-style: italic; }
-
-@font-face {
-  font-family: 'merriweather';
-  src: url("merriweather-light-webfont.eot");
-  src: url("merriweather-light-webfont.eot?#iefix") format("embedded-opentype"), url("merriweather-light-webfont.woff2") format("woff2"), url("merriweather-light-webfont.ttf") format("truetype"), url("merriweather-light-webfont.svg#merriweatherlight") format("svg");
-  font-weight: light;
-  font-style: normal; }
-
-@font-face {
-  font-family: 'merriweather';
-  src: url("merriweather-lightitalic-webfont.eot");
-  src: url("merriweather-lightitalic-webfont.eot?#iefix") format("embedded-opentype"), url("merriweather-lightitalic-webfont.woff2") format("woff2"), url("merriweather-lightitalic-webfont.ttf") format("truetype"), url("merriweather-lightitalic-webfont.svg#merriweatherlight_italic") format("svg");
-  font-weight: light;
-  font-style: italic; }
-
 /*--------------------------------------------------------------
 # Typography
 --------------------------------------------------------------*/
@@ -736,6 +708,22 @@ object {
 
 .textwidget {
   font-family: "Merriweather", Helvetica, serif; }
+  .textwidget .day-of-week {
+    font-weight: bold; }
+
+.widget.widget_archive ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0; }
+
+.widget.widget_archive a {
+  color: #248A83; }
+
+.contact-meta i {
+  padding-right: 15px; }
+
+.contact-meta a {
+  color: #248A83; }
 
 .blog .site-content,
 .error404 .site-content,
