--- a/themes/inhabitent/style.css
+++ b/themes/inhabitent/style.css
@@ -874,3 +874,63 @@ object {
       -ms-flex-pack: center;
           justify-content: center;
   color: #fff; }
+
+.page-id-66 .site-content .entry-header #secondary {
+  display: none; }
+
+.entry-header h1 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  color: #404040; }
+
+.custom-hero {
+  width: auto;
+  height: 100vh; }
+
+header.entry-header.custom-hero {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  font-size: 20px; }
+
+.entry-content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  font-family: "Merriweather", Helvetica, serif; }
+  .entry-content h2 {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    font-family: "Montserrat", Arial, sans-serif;
+    text-transform: uppercase;
+    color: #000;
+    font-size: 30px; }
+
+.container {
+  padding: 0px 100px; }
+
+p.p1 {
+  font-family: "Merriweather", Helvetica, serif;
+  line-height: 1.5;
+  font-size: 16px; }
