removed sidebar from front page and about page inside php

--- a/themes/inhabitent/sass/_page-templates.scss
+++ b/themes/inhabitent/sass/_page-templates.scss
@@ -10,13 +10,13 @@
 }
 
 .home {
-  .site-content {
-    #secondary {
-      display: none;
-    }
+  .site-header {
+    background: green;
+    min-height: 100vh;
+    background-image: url('../../images/home-hero.jpg');
+    background-size: cover;
   }
 }
-
 
 //sidebar
 #primary {
