--- a/themes/inhabitent/style.css
+++ b/themes/inhabitent/style.css
@@ -696,7 +696,7 @@ object {
 /*--------------------------------------------------------------
 # Page Templates
 --------------------------------------------------------------*/
-/* Front page TODO remove sidebar*/
+/* Front page*/
 .stories {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -704,10 +704,35 @@ object {
   list-style: none; }
 
 .home .site-header {
-  background: green;
   min-height: 100vh;
   background-image: url("../../images/home-hero.jpg");
   background-size: cover; }
+
+.product-type-blocks {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex; }
+  .product-type-blocks .product-type-block-wrapper {
+    margin: 10px;
+    padding: 10px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    border: 1px solid #e1e1e1;
+    border-top: 3px solid #e1e1e1; }
+    .product-type-blocks .product-type-block-wrapper img {
+      width: 40%;
+      margin: auto; }
 
 #primary {
   padding-right: 5%;
