--- a/themes/inhabitent/style.css
+++ b/themes/inhabitent/style.css
@@ -708,6 +708,20 @@ object {
   background-image: url("../../images/home-hero.jpg");
   background-size: cover; }
 
+.product-info.container h2 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  font-size: 30px;
+  text-transform: uppercase; }
+
 .product-type-blocks {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -733,6 +747,13 @@ object {
     .product-type-blocks .product-type-block-wrapper img {
       width: 40%;
       margin: auto; }
+    .product-type-blocks .product-type-block-wrapper a.btn {
+      background-color: #248A83;
+      width: 30px;
+      color: #FFF;
+      padding: .75rem 1.5rem;
+      text-decoration: none;
+      text-transform: uppercase; }
 
 #primary {
   padding-right: 5%;
